--- a/profile.html
+++ b/profile.html
@@ -48,7 +48,7 @@
             <label class="modal__form__label" for="message" id="labelMessage">Votre message</label>
             <input type="text" class="modal__form__input" id="message" aria-labelledby="labelMessage"/>
             <label class="modal__form__label--hidden" for="submit" id="labelSubmit">Envoie du message</label>
-            <input type="submit" class="modal__form__submit" id="submit" aria-label="Envoie du Message"/>
+            <input type="submit" class="modal__form__submit" id="submit" aria-labelledby="labelSubmit"/>
         </form>
     </section>  
     <section id="lightbox" class="lightbox" aria-label="image closeup viex">
